glue/codegen/src/snapshots/codegen__codegen_python__tests__anonymous_struct_pydantic.snap
---
source: codegen/src/codegen_python.rs
expression: gen_python(src)
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring
from pydantic import BaseModel
from pydantic import Field
from enum import StrEnum
from typing import Any, Annotated, Optional, Union

class User(BaseModel):
    profile: Annotated["UserProfile", Field()]


class UserProfile(BaseModel):
    bio: Annotated[str, Field()]
    age: Annotated[Optional[int], Field(default=None)]
    settings: Annotated[dict[str, "UserProfileSettingsValue"], Field()]


class UserProfileSettingsValue(BaseModel):
    enabled: Annotated[bool, Field()]
