glue/codegen/src/snapshots/codegen__codegen_python__tests__attrs.snap
---
source: codegen/src/codegen_python.rs
expression: gen_python_with_data_model_lib(SIMPLE_MODEL, GlueConfigSchemaGenerationPythonDataModelLibrary::Attrs)
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring

from attrs import define, field
from enum import StrEnum
from typing import Any, Optional, Union

@define
class User:
    name: str
    """The user's display name"""
    age: int
    email: Optional[str] = field(default=None)
    active: bool = field(default=True)
