glue/codegen/src/snapshots/codegen__codegen_python__tests__dataclasses_alias.snap
---
source: codegen/src/codegen_python.rs
expression: gen_python_with_data_model_lib(ALIAS_MODEL, GlueConfigSchemaGenerationPythonDataModelLibrary::Dataclasses)
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring

from dataclasses import dataclass
from enum import StrEnum
from typing import Any, Optional, Union

@dataclass
class User:
    id: int
    first_name: str
    metadata: Any
