glue/codegen/src/snapshots/codegen__codegen_python__tests__msgspec.snap
---
source: codegen/src/codegen_python.rs
expression: "gen_python_with_data_model_lib(SIMPLE_MODEL,\nGlueConfigSchemaGenerationPythonDataModelLibrary::Msgspec)"
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring

import msgspec
from enum import StrEnum
from typing import Any, Optional, Union

class User(msgspec.Struct):
    name: str
    """The user's display name"""
    age: int
    email: Optional[str] = msgspec.field(default=None)
    active: bool = msgspec.field(default=True)
