glue/codegen/src/snapshots/codegen__codegen_python__tests__msgspec_alias.snap
---
source: codegen/src/codegen_python.rs
expression: gen_python_with_data_model_lib(ALIAS_MODEL, GlueConfigSchemaGenerationPythonDataModelLibrary::Msgspec)
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring

import msgspec
from enum import StrEnum
from typing import Any, Optional, Union

class User(msgspec.Struct):
    id: int
    first_name: str = msgspec.field(name="firstName")
    metadata: Any
