glue/codegen/src/snapshots/codegen__codegen_python__tests__record_nested_in_model.snap
---
source: codegen/src/codegen_python.rs
expression: output
---
# pylint: disable=missing-class-docstring, missing-function-docstring, missing-module-docstring

from pydantic import BaseModel
from pydantic import Field
from enum import StrEnum
from typing import Any, Annotated, Optional, Union

class Container(BaseModel):
    inner: Annotated["ContainerInner", Field()]

class ContainerInner(BaseModel):
    data: Annotated[dict[str, Any], Field()]
    """Nested map field"""
